[gd_scene load_steps=3 format=2]

[ext_resource path="res://Undead/images/Zombie.png" type="Texture" id=1]
[ext_resource path="res://HUD/Temp/UndeadRecruitmentDescription.gd" type="Script" id=2]

[node name="UndeadRecruitDescription" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 568.0
margin_bottom = 128.0

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0

[node name="Image" type="TextureRect" parent="HBoxContainer/VBoxContainer4"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 132.0
margin_right = 332.0
margin_bottom = 128.0

[node name="Identity" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Zombie"

[node name="Description" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 0 )
text = "A sea bloated corpse found on Thrassian shores and haphazardly animated. While not particularly useful, it is at least ubiquitous and cheap"
valign = 1
autowrap = true

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 497.0
margin_bottom = 128.0

[node name="StatsTitle" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_right = 161.0
margin_bottom = 14.0
text = "Stats"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 161.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_right = 69.0
margin_bottom = 50.0

[node name="Attack" type="Label" parent="HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_right = 69.0
margin_bottom = 14.0
text = "Attack: 1"

[node name="Defense" type="Label" parent="HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 69.0
margin_bottom = 32.0
text = "Defense: 0"

[node name="Health" type="Label" parent="HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 69.0
margin_bottom = 50.0
text = "Health: 1"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 73.0
margin_right = 161.0
margin_bottom = 50.0

[node name="Quantity" type="Label" parent="HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_right = 88.0
margin_bottom = 14.0
text = "Quantity: 5"

[node name="Complexity" type="Label" parent="HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 88.0
margin_bottom = 32.0
text = "Complexity: 1"

[node name="Placeholder" type="Label" parent="HBoxContainer/VBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 88.0
margin_bottom = 50.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 501.0
margin_right = 568.0
margin_bottom = 128.0

[node name="CostTitle" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 67.0
margin_bottom = 14.0
text = "Cost"
align = 1

[node name="GoldCost" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 67.0
margin_bottom = 32.0
text = "Gold: 20"

[node name="CorpsesCost" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 67.0
margin_bottom = 50.0
text = "Corpses: 5"

[node name="ContagionCost" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 54.0
margin_right = 67.0
margin_bottom = 68.0

[node name="RecruitButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 67.0
margin_bottom = 92.0
mouse_filter = 1
text = "Recruit"

[node name="ErrorMessage" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 96.0
margin_right = 67.0
margin_bottom = 110.0

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 132.0
margin_right = 568.0
margin_bottom = 136.0
mouse_filter = 1
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/RecruitButton" to="." method="_on_RecruitButton_pressed"]
